@@ -10,7 +10,6 @@ import com.crschnick.pdxu.editor.gui.GuiEditorNodeTagFactory;
 import com.crschnick.pdxu.editor.node.EditorRealNode;
 import com.crschnick.pdxu.io.node.ArrayNode;
 import com.crschnick.pdxu.io.node.NodePointer;
-import com.jfoenix.controls.JFXButton;
 import javafx.scene.control.Button;
 import javafx.scene.layout.Region;
 import org.kordamp.ikonli.javafx.FontIcon;
@@ -98,7 +97,7 @@ public class Vic3SavegameAdapter implements EditorSavegameAdapter {
     }
 
     @Override
-    public NodePointer createNodeJump(EditorState state, EditorRealNode node) throws Exception {
+    public NodePointer createNodeJump(EditorState state, EditorRealNode node) {
         if (!state.isSavegame()) {
             return null;
         }
@@ -112,8 +111,8 @@ public class Vic3SavegameAdapter implements EditorSavegameAdapter {
         }
 
         if (keyOpt.isPresent() && node.getBackingNode().isArray() && node.getBackingNode().getArrayNode().size() == 1
-                && node.getBackingNode().getNodeArray().get(0).isValue()) {
-            return get(keyOpt.get(), node.getBackingNode().getNodeArray().get(0).getString());
+                && node.getBackingNode().getNodeArray().getFirst().isValue()) {
+            return get(keyOpt.get(), node.getBackingNode().getNodeArray().getFirst().getString());
         }
 
         if (parentKey.isPresent() && node.getBackingNode().isValue()) {
